[gd_scene load_steps=4 format=2]

[ext_resource path="res://background/target_area_base.gd" type="Script" id=1]
[ext_resource path="res://background/target_line.svg" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 5248, 1728 )

[node name="target_area_base" type="Area2D" index="0"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
monitorable = false
collision_layer = 64
collision_mask = 3
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )
_sections_unfolded = [ "Collision" ]
sound = null
stars_texture = null
stars = 0

[node name="collision_shape_2d" type="CollisionShape2D" parent="." index="0"]

visible = false
position = Vector2( 0, -1728 )
shape = SubResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="line_sprite" type="Sprite" parent="." index="1"]

self_modulate = Color( 1, 1, 1, 0.25098 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 0, 0, 7680, 8 )
_sections_unfolded = [ "Region", "Visibility" ]

[node name="stars_sprite" type="Sprite" parent="." index="2"]

self_modulate = Color( 1, 1, 1, 0.25098 )
position = Vector2( 0, 24 )
region_enabled = true
region_rect = Rect2( 0, 0, 7680, 48 )
_sections_unfolded = [ "Material", "Region", "Visibility" ]

[node name="achieved_sound" type="AudioStreamPlayer" parent="." index="3"]

stream = null
volume_db = -12.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"


